# hw2-hotfix

./: .gitignore  playground.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
data/: .gitignore  suffixes.json
